--- a/Portfolio-React/src/Components/Hero/Hero.css
+++ b/Portfolio-React/src/Components/Hero/Hero.css
@@ -22,8 +22,8 @@
 .hero p{
     width: 50%;
     text-align: center;
-    font: 24px;
-    line-height: 40px;
+    font-size: 23px;
+    line-height: 60px;
 }
 .hero-action{
     gap: 25px;
